Major changes between version 0.99.1 and 0.99.2.
------------------------------------------------
  - Allow the value for a debug fifo command to be given as
    hax (0x...) or octal (0...).
  - Removed spurious calls to {ppp,slip,dev}_reroute(). These
    were unnecessary (I think) and perhaps the reason why the
    idle filter socket sometimes seemed to stop receiving data.
  - The proxy should never be downed - it needs to be up in case
    we want to pass packets back to the kernel - instead we just
    remove the address. We do much the same for "mode dev" interfaces
    since some (ISDN) need to remain up if they are to accept
    incoming calls. We do have to remember to down the proxy
    on exit however.
  - If the remote end drops the link and we are in two-way mode
    we just go DOWN and wait for outgoing traffic. If we are not
    in two-way mode we have to do an immediate retry because we
    have no way of knowing why the link went down or whether the
    remote now has traffic piling up that should be reaching us.
  - Try and make sure the kernel setting of ip_dynaddr is non-zero
    if we are running in "dynamic" or "sticky" mode.
  - fixwrappers now checks exit status of ar to see if it succeeded
    or not.
  - Removed references to reroute and -reroute from the man page.
  - Enabled the demasq code.
  - Use a local netlink.h so we can compile with, hopefully, any
    kernel/libc combination.


Major changes between version 0.99 and 0.99.1.
------------------------------------------------
  - "make depend" now runs cc with -MM instead of -M to ignore
    system header files.
  - Map protocol numbers to names when logging debug info for
    firewall rule matches.
  - Wrong iovec count when sending packets on an ethertap proxy.
  - Moved the monitor "INTERFACE" output so that it happens
    even if an ifsetup script is used.
  - Read the full packet from the snooping socket simply because